--- a/gb/19/10/29/n11619757.md
+++ b/gb/19/10/29/n11619757.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bpewoh325/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bpewoh325/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bpewoh325/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bpewoh325/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>温柔自然人性化生产 医护人员与产妇受惠</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/12f4776a029e886b4ee3951f2be7bb96-600x400.jpg" />
 <h6>右2起，刘远祺-妇产科主治医师，蔡菊镁助产师，刘医师贤内助，护理师，林祺海。（宋顺澈／大纪元）
 </h6>
 <hr>
 <p>【大纪元2019年10月29日讯】（大纪元记者宋顺澈台湾新北市报导）去年荣获新北市市长颁发“护理杰出贡献奖”，以及蝉联两届荣获卫生局“子抹癌筛成绩卓越嘉奖”的禾颐助产所—蔡菊镁助产师，于日前获邀至板桥中山路丰禾妇产科医院讲授温柔生产的概念与临床经历，剖析台湾生产环境未来趋势；以其几拾年的临床丰富经验，具备高度技术又人性化的接生方式深获各界好评，今将其优质的理念提供给正在执业的医师、护理师参酌，并鼓励医护人员于临床上施予孕产妇以多元友善的生产方式为最佳考量。</p>
-<p>最近新成立的丰禾妇产科是一家规模宏大的综合医院，有五位医师驻诊，包括一位小儿科医师，内部设施有最先进的医疗设备与五星级设备的舒适的房间与产妇休息睡觉床，也有广大空间的幼儿、儿童游戏间，以及图书阅览室及袖珍型图书馆供家属来阅览图书。也有宽广的家属休息交流空间。丰禾机构主治医师-刘远祺表示：“我们丰禾妇产科医院一向崇尚<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>，今日特别邀请蔡菊镁助产师讲述有关温柔生产概念与多年的临床经历分享，以提供给本院医护人员与产妇之间多一层对温柔生产（多元友善生产）方式的认知。”</p>
+<p>最近新成立的丰禾妇产科是一家规模宏大的综合医院，有五位医师驻诊，包括一位小儿科医师，内部设施有最先进的医疗设备与五星级设备的舒适的房间与产妇休息睡觉床，也有广大空间的幼儿、儿童游戏间，以及图书阅览室及袖珍型图书馆供家属来阅览图书。也有宽广的家属休息交流空间。丰禾机构主治医师-刘远祺表示：“我们丰禾妇产科医院一向崇尚<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>，今日特别邀请蔡菊镁助产师讲述有关温柔生产概念与多年的临床经历分享，以提供给本院医护人员与产妇之间多一层对温柔生产（多元友善生产）方式的认知。”</p>
 <p>刘远祺医师说明：“从今尔后，本院将与蔡助产师正式共造合作模式，共同创造多元友善生产环境与温柔生产方式，以提供给予孕妇产妇们最佳的照护品质，提升自然产率以降低剖腹产个案数，即日起若有意愿选择温柔生产的孕产妇，或是即将临盆的准妈妈们，可将个案转介给经验丰富的蔡助产师以作为主要咨询的对象，本院另设有专属诊间，提供环境给予孕产妇们直接与蔡助产师咨询，俾使怀孕妇女们对温柔生产有更深入的了解。”</p>
 <h2>蔡菊镁助产师讲述—何谓温柔生产？</h2>
-<p>温柔生产等于多元友善生产，也是等于<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E6%B0%B4%E4%B8%AD%E7%94%9F%E4%BA%A7.md#1">水中生产</a>、居家生产，亦称为顺势生产，顺势生产系为万物中大自然的自由落体理论，如：瓜熟蒂落、小鸡自行破壳而出。多元友善生产将是世界未来必然的趋势，高科技始终来自于人性．科技即使再怎么发达，人类最原始的东西还是无法被新科技所取代的。蔡菊镁表示，人是需要被关怀、被呵护、被尊重的，而且科技的产品若是不能符合人性需求，则科技的使用就未必适合应用于妇女生产这方面。</p>
+<p>温柔生产等于多元友善生产，也是等于<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B0%B4%E4%B8%AD%E7%94%9F%E4%BA%A7.md#1">水中生产</a>、居家生产，亦称为顺势生产，顺势生产系为万物中大自然的自由落体理论，如：瓜熟蒂落、小鸡自行破壳而出。多元友善生产将是世界未来必然的趋势，高科技始终来自于人性．科技即使再怎么发达，人类最原始的东西还是无法被新科技所取代的。蔡菊镁表示，人是需要被关怀、被呵护、被尊重的，而且科技的产品若是不能符合人性需求，则科技的使用就未必适合应用于妇女生产这方面。</p>
 <p>蔡菊镁举例说明，国外文献上记载：多元友善生产照护起源于1996年，德国、意大利、卢森堡、纽西兰等多个国家，母亲友善生产倡议是在北美的历史上，第一个由专业组织和个人及多学科的组织在处理待产和生产上达成共识的声明，CIMS的成员制定并认可了母亲友善生产，倡议者包括：生产教育家，产科护理师，护士，助产师，助产士，医师，陪产员，哺乳顾问，正常分娩和哺乳的基层提倡者，产科护理研究人员，产妇心理健康的大学教授、专家，作者以及产妇家属。</p>
 <p>蔡菊镁表示，在国外有许多医院、专业者提出呼吁，2006年WHO/UNICEF当局将友善生产照护纳入‘爱婴医院’作为评估工具选择的一部分，有些国家已经正式纳入爱婴医院的认证标准。例如:德国、英国、意大利、卢森堡、纽西兰等多个国家。友善生产措施(CIMS 1996)主要是提供产妇‘不受限制自己选择的生产陪伴者，包括父亲、伴侣、孩子、家人及朋友，不受限制由一位熟练的女性得到持续的情绪以及生理上支持，例如:陪产员或专业的接生支持者。’</p>
-<p>林祺海导师系为印度“灵魂之窗”Amar Eye Yugo负责人，今日专程带着两位自然产的健康宝宝来到会场，林祺海讲述：“妻子徐以萳的两次<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>过程，两次生产都是如临薄冰的情况下，得到蔡助产师在整个生产过程的协助而转危为安的实证个案，我们仿佛得到贵人的相助，保住了性命与女性的重要器官。”</p>
+<p>林祺海导师系为印度“灵魂之窗”Amar Eye Yugo负责人，今日专程带着两位自然产的健康宝宝来到会场，林祺海讲述：“妻子徐以萳的两次<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>过程，两次生产都是如临薄冰的情况下，得到蔡助产师在整个生产过程的协助而转危为安的实证个案，我们仿佛得到贵人的相助，保住了性命与女性的重要器官。”</p>
 <p>林祺海叙述：“3年前生第一胎的时候，因为担心现在的医院动辄开刀，甚者割除器官损害身体也失去健康，此种情况比比皆是，因此找到蔡助产师，经过长时间沟通了解之后，犹如放下一颗心中大石头卸下心理沉重的负担，主要原因是内人与家族的遗传有关，第一胎从10分钟规则性的阵痛到孩子娩出，足足等了36个小时子宫颈开全，破水之后胎儿才缓缓从产道娩出，等到胎儿顺利娩出后，事隔一个小时胎盘仍尚未娩出，蔡助产师见情况不对劲，当下非常淡定的采以人工剥离方式尽快处理，胎盘虽然顺利的娩出，但是我们全家丝毫没有感受到以前的慌乱，如丈母娘当年在医院里面临的窘境，医院上下人员如兵荒马乱、措手不及、慌乱不安，院方特别见议，以后就最好不要再生了。也因为此一事故发生再先，导致我内人-徐以萳没有其他的兄弟姊妹。</p>
 <p>林先生又叙述：“内人如劫后余生，原来产后遇上了大关卡-植入性胎盘，幸亏找到了生命贵人-蔡助产师，虽然整个生产过程是艰辛的，但是结果是喜悦的，若是有第二胎，我们还是会给蔡助产师接生，她是经验丰富、临危不乱、颇富有爱心、耐心的助产人员，我们全家对她的接生技术与德泽都赞叹不已。”</p>
-<p>林先生又说：“今年三月底，我们生第二胎时，老天爷再度给我们大考验-胎位不正，幸亏我们在整个怀孕过程中都有按照蔡助产师给我们的指示，做好孕前体能的准备，虽然过程是煎熬的但是结局是甜美的。第二胎虽然是胎位不正，但是蔡助产师非常有把握的让我们达成<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E6%B0%B4%E4%B8%AD%E7%94%9F%E4%BA%A7.md#1">水中生产</a>，而且老二整个娩出的过程我们都有拍录下来，她是V字型娩出来的。徐以萳在整个生产过程中没有施打任何的催生剂、止痛剂，也没有会阴剪一刀；破水之后，胎儿的先露部是臀位，臀位是体位的最大先露部位，在胎儿娩出的过程中，胎儿是配合母体宫缩的节奏缓缓滑出水里，等到胎头快出来时蔡助产师技巧性地协助让小孩头部顺利的娩出。当孩子顺利娩出后又面临一大关卡-又是‘植入性胎盘’，蔡助产师也是井然有序从容不迫地予以人工剥离方式处置，整个过程算是有惊无险。”</p>
+<p>林先生又说：“今年三月底，我们生第二胎时，老天爷再度给我们大考验-胎位不正，幸亏我们在整个怀孕过程中都有按照蔡助产师给我们的指示，做好孕前体能的准备，虽然过程是煎熬的但是结局是甜美的。第二胎虽然是胎位不正，但是蔡助产师非常有把握的让我们达成<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B0%B4%E4%B8%AD%E7%94%9F%E4%BA%A7.md#1">水中生产</a>，而且老二整个娩出的过程我们都有拍录下来，她是V字型娩出来的。徐以萳在整个生产过程中没有施打任何的催生剂、止痛剂，也没有会阴剪一刀；破水之后，胎儿的先露部是臀位，臀位是体位的最大先露部位，在胎儿娩出的过程中，胎儿是配合母体宫缩的节奏缓缓滑出水里，等到胎头快出来时蔡助产师技巧性地协助让小孩头部顺利的娩出。当孩子顺利娩出后又面临一大关卡-又是‘植入性胎盘’，蔡助产师也是井然有序从容不迫地予以人工剥离方式处置，整个过程算是有惊无险。”</p>
 <p>林先生补充：“诚如以萳所说的：“她是天上的神派来帮助我们的”。如今我们两个小孩都平安顺利的逐渐长大，她们也都长得很健康又乖巧，而且两个小孩名字亦是蔡助产师命名的，我们全家仿佛与蔡助产师具有非常深厚的渊源，她真是我们生命中的贵人，也是值得大家信赖的助产人员。”</p>
 <p>蔡菊镁说：“生产并非生病，但是怀孕时会并发很多合并症状，因此产前的卫教极为重要。当每个孕妇在怀孕过程中有适当的运动、适当的休息、均衡的营养、定时产前检查，祇要没有并发症，几乎都可采取温和多元友善的生产方式，整个生产不需借助过多的医疗介入，譬如；凯特王妃两个小孩都是助产人员接生，医生祇是在旁等候而已。”</p>
 <p>今年五月初蔡菊镁帮一位居住新庄地区的一位美籍产妇居家生产，蔡菊镁说：“产妇亦是没有介入任何的医疗与药物，整个过程进展得非常顺利，毫发无伤且顺利哺喂母乳，产妇体能恢复迅速而且可立即下床走动，这就是自然生产的最大益处。”</p>
@@ -27,48 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/4/18/n9050456.md#1">新北助产师理监事会 居家自然生产造福社会</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/6/18/n9280008.md#1">Ella产后初亮相 生日脸书直播高喊：开工啦</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/3/13/n10215330.md#1">孕妇红海游泳 一人进两人出 水中分娩照爆红</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/19/1/11/n10969519.md#1">隋棠惊爆：产子时绝望16小时 三宝出生就骨折</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/19/4/12/n11181379.md#1">“袋鼠妈妈”育新儿 圣保罗医院首获成功</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/19/5/23/n11275124.md#1">挺孕肚力推“温柔生产” 简嫚书包场赞助电影</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/10/31/n12515862.md#1">明志书院庆典文化季 泰山70周年纪念</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/10/27/n12505576.md#1">暂缓教师打公费流感疫苗 到货后恢复接种</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/10/24/n12499202.md#1">各路狮王问鼎泰山 鸣鼓开赛震响四方</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/10/21/n12491144.md#1">国际狮子会300B2区健行 糖尿病防治</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/4/18/n9050456.md#1">新北助产师理监事会 居家自然生产造福社会</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/18/n9280008.md#1">Ella产后初亮相 生日脸书直播高喊：开工啦</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/13/n10215330.md#1">孕妇红海游泳 一人进两人出 水中分娩照爆红</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/11/n10969519.md#1">隋棠惊爆：产子时绝望16小时 三宝出生就骨折</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/4/12/n11181379.md#1">“袋鼠妈妈”育新儿 圣保罗医院首获成功</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/5/23/n11275124.md#1">挺孕肚力推“温柔生产” 简嫚书包场赞助电影</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741510.md#1">疫情攀升 产妇选择居家生产避群聚感染</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741429.md#1">居家照护小帮手 关怀包快筛预约随到随领</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740549.md#1">职安楷模选拔 北西区处荣获甲组第一名</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739942.md#1">新北976诊所提供视讯诊疗 持续增加中</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/1/n12517575.md#1">【大陆新闻解毒】时事小品：中国人民组织起来了</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/28/n12437702.md#1">【思想领袖】林赛：美左派破坏圣像 犹如文革</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515233.md#1">【重播】最后冲刺 川普及夫人访宾州五地演讲</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515225.md#1">【拍案惊奇】美大选“神算”开口 中共甩锅新招</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513453.md#1">Rain与TWICE玩黑手党游戏 粉丝Momo共舞好紧张</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512257.md#1">崔智友产后5月速开工 抱着婴儿现身母爱爆棚</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514662.md#1">干咳不是感冒是秋燥？1穴位立即止咳</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bpewoh325/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bpewoh325/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/29/n11619757.htm">温柔自然人性化生产 医护人员与产妇受惠</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/29/n11619757.htm">温柔自然人性化生产 医护人员与产妇受惠</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bpewoh325/djy/blob/master/gb/19/10/29/n11619757.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bpewoh325/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bpewoh325/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/10/29/n11619757.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
